feat: create login/registration page, user service, route setup and tilt setup
